# pdbot

./: .gitignore  data.json  embed_help_command.py  keep_alive.py  main.py  prefixes.json  pyproject.toml  readme.md  requirements.txt
cogs/: actual cog exampe  admin.py  api.py  badbloq.py  beatsaber.py  devcommands.py  eco.py  embeds.py  errorhandler.py  examplecog.py  fun.py  greetings.py  imagemanip.py  invites.py  killbloq.py  logging.py  misc.py  mongo.py  owner.py  prefixes.py  reactions.py  speak.py  tenor.py  testingjson.py  tracking.py  useful.py  wand.py  zane.py
cogs/utils/: checks.py
help/: help.py
template/: index.html
utils/: argparser.py  context.py  default.py  embed.py
