[tool.poetry]
name = "pdbot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
onetimepad = "^1.4"
aiohttp = "^3.7.3"
humanize = "^3.2.0"
timeago = "^1.0.15"
discord = "^1.0.1"
psutil = "^5.8.0"
lyricsgenius = "^2.0.2"
wand = "^0.6.5"
flask = "^1.1.2"
asyncdagpi = "^3.2.2"
Pillow = "^8.1.0"
discord-pretty-help = "^1.2.0"
async-google-trans-new = "^1.1.2"
TenGiphPy = "^2.0.0"
jishaku = "^1.20.0"
polaroid = "^0.2.10"
iso-639 = "^0.4.5"
ping3 = "^2.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
